refactoring trees of template

--- a/templates/SITES/PAGES/admin/index.html.twig
+++ b/templates/SITES/PAGES/admin/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'BACK/base.html.twig' %}
+{% extends 'SITES/BACK/base.html.twig' %}
 
 {% block title %}Hello AdminController!{% endblock %}
 
