--- a/templates/COMPONENTS/navbar.front.html.twig
+++ b/templates/COMPONENTS/navbar.front.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-{{classNavbar}} bg-{{classNavbar}}">
+<nav class="navbar navbar-expand-lg navbar-{{classButton.navbar}} bg-{{classButton.navbar}}">
   <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -29,9 +29,9 @@
     </ul>
         <a href="{{path(classButton.url )}}">
             <button class="btn {{ classButton.text }}">
-                {% if classNavbar is same as('light') %}
+                {% if classButton.navbar is same as('light') %}
                     Login
-                {% elseif classNavbar is same as('dark') %}
+                {% elseif classButton.navbar is same as('dark') %}
                     Logout
                 {% endif %}
             </button>
